--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <script src="./src/firework.js"></script>
-    <script src="./src/sketch.js"></script>
+    <script src="src/firework.js"></script>
+    <script src="src/sketch.js"></script>
   </body>
 </html>
