--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <script src="/libraries/p5.min.js"></script>
+    <script src="/libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
-    <script src="src/firework.js"></script>
-    <script src="src/sketch.js"></script>
+    <script src="/src/firework.js"></script>
+    <script src="/src/sketch.js"></script>
   </body>
 </html>
