--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <div id="sun"></div>
+    <input value="start" id="time" type="button">
+    <script src="src/time.js"></script>
     <script src="src/firework.js"></script>
     <script src="src/sketch.js"></script>
   </body>
